includes/usb_layer.h

/**
 * @brief USB backend type enumeration
 *
 * Defines the available USB backend implementations.
 */
enum usb_backend_type {
	USB_BACKEND_AUTO = 0,    /**< Auto-select backend (Windows: winusb, Linux/macOS: libusb) */
	USB_BACKEND_LIBUSB = 1,   /**< Force use libusb backend */
	USB_BACKEND_WINUSB = 2,   /**< Force use winusb backend (Windows only) */
};
/**
 * @brief Set USB backend type
 *
 * Sets the USB backend to use for subsequent USB operations.
 * On Windows, both libusb and winusb are available.
 * On Linux/macOS, only libusb is available.
 *
 * @param backend USB backend type to use
 * @return EFEX_ERR_SUCCESS on success, or EFEX_ERR_INVALID_PARAM if backend is not supported
 */
int sunxi_efex_set_usb_backend(enum usb_backend_type backend);
/**
 * @brief Get current USB backend type
 *
 * Returns the currently selected USB backend type.
 *
 * @return Current USB backend type
 */
enum usb_backend_type sunxi_efex_get_usb_backend(void);