rust/libefex-sys/src/lib.rs


    pub fn sunxi_efex_fes_down(
        ctx: *const sunxi_efex_ctx_t,
        buf: *const c_char,
        len: c_int,
        addr: u32,
        typ: sunxi_fes_data_type_t,
    ) -> c_int;

    pub fn sunxi_efex_fes_up(
        ctx: *const sunxi_efex_ctx_t,
        buf: *const c_char,
        len: c_int,
        addr: u32,
        typ: sunxi_fes_data_type_t,
    ) -> c_int;

    pub fn sunxi_efex_fes_verify_value(
        ctx: *const sunxi_efex_ctx_t,
        addr: u32,
        size: u64,
        buf: *const sunxi_fes_verify_resp_t,
    ) -> c_int;

    pub fn sunxi_efex_fes_verify_status(
        ctx: *const sunxi_efex_ctx_t,
        tag: u32,
        buf: *const sunxi_fes_verify_resp_t,
    ) -> c_int;

    pub fn sunxi_efex_fes_verify_uboot_blk(
        ctx: *const sunxi_efex_ctx_t,
        tag: u32,
        buf: *const sunxi_fes_verify_resp_t,
    ) -> c_int;

    pub fn sunxi_efex_fes_tool_mode(
        ctx: *const sunxi_efex_ctx_t,
        tool_mode: sunxi_fes_tool_mode_t,
        next_mode: sunxi_fes_tool_mode_t,
    ) -> c_int;

    // Payloads =====
    pub fn sunxi_efex_fel_payloads_init(arch: sunxi_efex_fel_payloads_arch) -> c_int;

    pub fn sunxi_efex_fel_payloads_readl(
        ctx: *const sunxi_efex_ctx_t,
        addr: u32,
        val: *mut u32,
    ) -> c_int;

    pub fn sunxi_efex_fel_payloads_writel(
        ctx: *const sunxi_efex_ctx_t,
        val: u32,
        addr: u32,
    ) -> c_int;

    // USB backend functions
    pub fn sunxi_efex_set_usb_backend(backend: usb_backend_type) -> c_int;

    pub fn sunxi_efex_get_usb_backend() -> usb_backend_type;
}
